--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -25,7 +25,7 @@
     justify-content: space-between;
 
     h3{
-        font-weight: 100;
+        font-weight: 400;
     }
 
 }
@@ -63,10 +63,14 @@
     background-color: white;
     border-radius: 4px;
     color: $dark-grey;
-    display: flex;  
+    display: flex;
+    justify-content: space-between;  
     margin-bottom: 10px;
     overflow: hidden;
     transition: transform .3s all;
+    max-height: 82px;
+    
+    
     
     &:hover{
         background-color: darken($color: white, $amount: 10);
@@ -75,12 +79,14 @@
 }
 
 .journal__entry-picture{
-    height: 75px;
-    width: 75px;
+    min-height: 75px;
+    min-width: 75px;
+    box-sizing: inherit;
 }
 
 .journal__entry-body{
     padding: 10px;
+    
 }
 
 .journal__entry-title{ 
